# matzo

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: aquan.matzo  auran.matzo  celestial.matzo  druidic.matzo  giant.matzo  gnoll.matzo  gnomish.matzo  goblin.matzo  halfling.matzo  halfling_ipa.matzo  peano.matzo  person.matzo  simple.matzo  simple_ipa.matzo  sylvan.matzo  terran.matzo  vexed.matzo
src/: ast.rs  builtins.rs  core.rs  errors.rs  grammar.lalrpop  interp.rs  lexer.rs  lib.rs  main.rs  rand.rs  repl.rs  value.rs
tests/: aquan.output  aquan.parsed  assn.matzo  assn.parsed  atom_lit.matzo  atom_lit.parsed  exprs.matzo  exprs.parsed  fixed.matzo  fixed.output  fixed.parsed  functions.matzo  functions.output  functions.parsed  hello.matzo  hello.output  hello.parsed  num_lit.matzo  num_lit.parsed  patterns.matzo  patterns.parsed  records.matzo  records.output  records.parsed  simple.matzo  simple.output  simple.parsed  str_lit.matzo  str_lit.parsed  tuples.matzo  tuples.output  tuples.parsed
tools/: regenerate.rs
