[package]
name = "matzo"
version = "0.1.0"
edition = "2021"
default-run = "matzo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matzo"

[[bin]]
name = "matzo"
path = "src/main.rs"

[[bin]]
name = "matzo-regenerate"
test = true
path = "tools/regenerate.rs"

[dependencies]
regex = "1"
rand = "*"
lalrpop-util = { version = "*", features = ["lexer"] }
logos = "*"
rustyline = "*"
ansi_term = "*"

[build-dependencies]
vergen = "*"

[build-dependencies.lalrpop]
version = "*"
features = ["lexer"]

[dev-dependencies]
pretty_assertions = "*"