[package]
name = "matzo"
version = "0.1.0"
edition = "2021"
default-run = "matzo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matzo"

[[bin]]
name = "matzo"
path = "src/main.rs"

[[bin]]
name = "matzo-regenerate"
test = true
path = "tools/regenerate.rs"

[target.'cfg(unix)'.dependencies]
rustyline = "9.1"

[dependencies]
regex = "1.5.5"
rand = "*"
lalrpop-util = { version = "*", features = ["lexer"] }
logos = "*"
ansi_term = "*"
string-interner = "*"
anyhow = "*"
titlecase = "*"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
serde_yaml = "0.8"
dirs = "*"
unicode-normalization = "*"

[build-dependencies]
vergen = "*"

[build-dependencies.lalrpop]
version = "*"
features = ["lexer"]

[dev-dependencies]
pretty_assertions = "*"
